# job-scraper-platform

./: .gitignore  db.sqlite3  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
jobs/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
jobs/management/commands/: scrape_jobs.py
jobs/migrations/: 0001_initial.py  0002_skilltag_job_raw_scraper_meta_job_salary_max_and_more.py
jobs/services/: fetch.py
jobs/services/parsers/: base.py
jobs/services/scrapers/: __init__.py  base.py
jobs/templates/jobs/: job_detail.html  job_list.html
scrapers/: __init__.py  engine.py  fetch.py
scrapers/parsers/: __init__.py  html.py
