[project]
name = "job-scraper-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "jermzblake",email = "jermzblake@gmail.com"}
]
requires-python = ">=3.14,<4"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "django-environ (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''